--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "axios": "^1.8.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
